2006-10-09  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tcl/file.tcl: Fixed variable typo.
	* nsd/log.c: Avoid holding lock during callback invocation.
	* test/ns_log.test: Added test for callbacks.
	
2006-10-07  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/file.tcl: Invalidate cache proc on Tcl error

2006-10-06  Stephen Deasey  <sdeasey@users.sf.net>

	* m4/tcl.m4: Update to latest from Tcl CVS. No more annoying
	messages about underquoted macros when generating the build
	scripts!

2006-10-05  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/ns_memoize.man: Add description of the memoize
	commands. (All 3 commands described in a single man page.)

	* doc/src/version_include.in:
	* configure.in: Set a variable "version" and substitute the
	PACKAGE_VERSION into it.
	* doc/src/ns_memoize.man: Use the version variable.

2006-10-04  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/binder.c: Make UDP sockets support broadcast option by default

2006-10-04  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclthread.c: Fixed handling of mutex identifiers
	in [ns_cond wait] to allow string-based handles as the
	rest of the code.

2006-10-02  Vlad Seryakov  <seryakov@users.sf.net>

	nsd/driver.c: Make driver to use Unix domain sockets of 
	type DGRAM and STREAM

2006-09-28  Vlad Seryakov  <seryakov@users.sf.net>

	* Makefile:
	* contrib/examples: Added examples dir with index page and
	upload script. Updated makefile to do exampels installation
	during make install

2006-09-27  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c: Fixed bug in ns_upload_stats

	* nsd/config.c: Changed log Debug level to Dev level
	to make logfile not filled with too many debug messages

2006-09-27  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Added "-maxruns" parameter for proxy queue
	to limit number of runs in the proxy. After reaching the limit 
	the proxy slave process is automatically restarted.
